Bug 334142 - configure knotes collections are not distinguishible
Summary: configure knotes collections are not distinguishible
Status: RESOLVED FIXED
Alias: None
Product: knotes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.13
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-30 15:21 UTC by pier andre
Modified: 2014-05-02 07:06 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pier andre 2014-04-30 15:21:48 UTC
in the configure knotes the collections  should be distinguished one from the other and not called simply notes as shown in this picture
http://paste.opensuse.org/7879062

Reproducible: Always

Steps to Reproduce:
1.rightclick on knotes icon in system tray choose configure knotes
2.click on collection
3.try to choose what collection you want
Actual Results:  
all the collections are called notes

Expected Results:  
collections should have different names
Comment 1 Laurent Montel 2014-04-30 15:38:44 UTC
Indeed we must be able to customize collection title.
I will implement it for 4.14
Comment 2 Laurent Montel 2014-05-02 06:51:38 UTC
Git commit 7aff61b932d79a428aed098fcb60016bc38250a8 by Montel Laurent.
Committed on 02/05/2014 at 06:51.
Pushed by mlaurent into branch 'master'.

Continue to implement rename collection

M  +37   -3    knotes/configdialog/knotecollectionconfigwidget.cpp
M  +2    -1    knotes/configdialog/knotecollectionconfigwidget.h

http://commits.kde.org/kdepim/7aff61b932d79a428aed098fcb60016bc38250a8
Comment 3 Laurent Montel 2014-05-02 07:06:29 UTC
Git commit 9676c1dbaa0457e1a6b653e820c0ae0422a04e09 by Montel Laurent.
Committed on 02/05/2014 at 07:06.
Pushed by mlaurent into branch 'master'.

Fix Bug 334142 - configure knotes collections are not distinguishible

FIXED-IN: 4.14

M  +0    -1    knotes/configdialog/knotecollectionconfigwidget.cpp

http://commits.kde.org/kdepim/9676c1dbaa0457e1a6b653e820c0ae0422a04e09