Fix Bug 334142 - configure knotes collections are not distinguishible

FIXED-IN: 4.14
BUG: 334142